# gateway

./: .gitignore  Cargo.toml  Dockerfile  README.md  TODOS.md  docker-compose.full.yml  docker-compose.yml  endpoints.yaml  routing.yaml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/gateway-anonymizer/: Cargo.toml
crates/gateway-anonymizer/src/: audit.rs  detector.rs  eval.rs  hmac_digest.rs  lib.rs  ollama.rs  placeholder.rs  regex_detector.rs  rules.rs  session.rs  streaming.rs  tiered.rs
crates/gateway-anonymizer/tests/: detector_test.rs  placeholder_test.rs  rules_test.rs  session_test.rs  streaming_test.rs
crates/gateway-cli/: Cargo.toml
crates/gateway-cli/src/: canary.rs  demo.rs  doctor.rs  main.rs  verify.rs
crates/gateway-common/: Cargo.toml
crates/gateway-common/src/: canary_baseline.rs  config.rs  errors.rs  lib.rs  types.rs
crates/gateway-ebpf-loader/: Cargo.toml  Dockerfile
crates/gateway-ebpf-loader/src/: config.rs  dns.rs  lib.rs  main.rs
crates/gateway-ebpf-loader/tests/: config_test.rs
crates/gateway-ebpf-programs/: Cargo.toml
crates/gateway-ebpf-programs/src/: main.rs
crates/gateway-proxy/: Cargo.toml
crates/gateway-proxy/src/: format.rs  handler.rs  lib.rs  main.rs  metrics.rs  privacy_api.rs  readiness.rs  receipts.rs  routing.rs  sse_buffer.rs  state.rs  warmup.rs
crates/gateway-proxy/src/canary/: features.rs  mod.rs  probe.rs  state.rs
crates/gateway-proxy/src/transparency/: mod.rs  rekor.rs  state.rs
crates/gateway-proxy/tests/: concurrency_test.rs  format_test.rs  handler_test.rs  metrics_test.rs  privacy_api_test.rs  readiness_test.rs  routing_test.rs  streaming_test.rs  tiered_wiremock_test.rs  transparency_test.rs
docs/investigations/: 2026-04-22-codex-t8-warmup-self-dos.md
docs/plans/: 2026-04-09-001-feat-privacy-gateway-phase1-plan.md  2026-04-09-002-feat-privacy-gateway-phase2-plan.md  2026-04-10-001-feat-p0-fix-merge-ebpf-phase3-plan.md  2026-04-10-002-fix-ebpf-tech-debt-plan.md
eval/: BENCHMARK_RESULTS.md  canary_baseline.json  generate_pii_100.py  pii_100.jsonl  run_benchmark.py  sample_benchmark.jsonl
examples/rules/: sample.yaml
scripts/: install.sh
