[package]
name = "gateway-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "gateway"
path = "src/main.rs"

[dependencies]
gateway-common = { path = "../gateway-common" }
gateway-anonymizer = { path = "../gateway-anonymizer" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
clap = { version = "4", features = ["derive", "env"] }
thiserror.workspace = true
ratatui.workspace = true
crossterm.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
libc = "0.2"

[dev-dependencies]
tempfile = "3"
