[package]
name = "gateway-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "gateway-proxy"
path = "src/main.rs"

[dependencies]
gateway-common = { path = "../gateway-common" }
gateway-anonymizer = { path = "../gateway-anonymizer" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
reqwest.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
chrono.workspace = true

[dev-dependencies]
assert_matches.workspace = true
tokio = { workspace = true, features = ["test-util"] }
