[package]
name = "gateway-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "gateway_proxy"
path = "src/lib.rs"

[[bin]]
name = "gateway-proxy"
path = "src/main.rs"

[dependencies]
gateway-common = { path = "../gateway-common" }
gateway-anonymizer = { path = "../gateway-anonymizer" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
reqwest.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
chrono.workspace = true
uuid.workspace = true
async-trait.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
serde_yaml.workspace = true
bytes = "1"
futures-util = "0.3"
lru = "0.12"
ed25519-dalek = { version = "2", features = ["pem", "rand_core"] }
rs_merkle = "1"
sha2.workspace = true
base64 = "0.22"
hex = "0.4"
rand = "0.8"

[dev-dependencies]
assert_matches.workspace = true
tokio = { workspace = true, features = ["test-util"] }
wiremock = "0.6"
temp-env = "0.3"
ollama-rs.workspace = true
ed25519-dalek = { version = "2", features = ["pem", "rand_core"] }
rand = "0.8"
base64 = "0.22"
hex = "0.4"
tempfile = "3"
